--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "sass": "^1.57.1",
     "ts-jest": "^29.0.3"
   }
 }
