--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "baseUrl": "./src",
+    "paths": {
+      "styles/": ["styles/"],
+      "image/": ["image/"]
+    },
     "jsx": "react-jsx"
   },
   "include": ["src", "src/react-app-env.d.ts", "test"]
