--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "zulu",
+  "author": "Jose Alfaro",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
