--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "firebase": "^10.13.1",
     "jest-sonar-reporter": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
